<resources>
    <string name="app_name">Decser Connect</string>
    <string name="title_activity_dash">Decser Connected</string>
    <string name="homepage">Homepage</string>
    <string name="title_activity_import_key">Add Connection</string>
    <string name="keyChooserHelpText">Choose key file</string>
    <string name="importHelperText">Save</string>
    <string name="peerName">Name</string>
    <string name="action_import">Import Key</string>
    <string name="hostname">Web address</string>
    <string name="request_guest_key">Request guest key</string>
    <string name="title_activity_download_media">Download Media</string>
    <string name="tvDownloadLabel">Server Files</string>
    <string name="title_activity_splash_screen">Splash Screen</string>
    <string name="share_key">Share key</string>
    <string name="bDeleteKey">Delete</string>
    <string name="title_activity_peer_connect">Peer Connect</string>
    <string name="is_personal_key">Personal Key</string>
    <string name="contact_name_hint">Connection Name</string>
    <string name="select_key">Select the key file</string>
    <string name="profile_picture">Profile picture</string>
    <string name="empty_home_view">Tap + to add a new connection</string>
    <string name="empty_download_manager_view">No active downloads on your server , tap + to add one</string>
    <string name="is_guest_key">Friend\'s Key</string>
    <string name="share_id_hint">Email ID of the person to share key with</string>
    <string name="turn_on_discovery">Turn on discovery</string>
    <string name="load_server_media">Load media from server</string>
    <string name="title_activity_xmpp">XmppActivity</string>
    <string name="enter_message">Enter message</string>
    <string name="message_send">send</string>
    <string name="enter_your_hostname">Enter your Hostname</string>
    <string name="enter_a_username">Enter a username</string>
    <string name="register">Register</string>
    <string name="select_key_file">Select Key File</string>
    <string name="show_back_files">Show BackedUp files</string>
    <string name="add_auto_backup_directory">Add auto backup directory</string>
    <string name="list_of_auto_back_up_directories">List of Auto-Back Up Directories</string>
    <string name="password_hint_and_info">Enter a Password (Note that this password will not be sent to the server but will be saved locally on your phone)</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="do_you_have_a_decserver">Do you have a decserver ?</string>

    <string name="title_activity_web_dashboard">WebDashboardActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="refresh">refresh</string>
    <string name="start_or_pause_download">Start or Pause Download</string>
    <string name="light">Light</string>
    <string name="backedup_files">Backedup files</string>
    <string name="go_up_a_level">Go up a level</string>
    <string name="select_this_directory">Select this directory</string>
    <string name="file_explorer">File Explorer</string>
</resources>
