<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">


    <EditText
        android:id="@+id/etPeerName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:ems="8"
        android:hint="@string/contact_name_hint"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etHostname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etPeerName"
        android:digits="abcdefghijklmnopqrstuvwxyz.-0123456789"
        android:ems="8"
        android:hint="@string/hostname"
        android:inputType="textNoSuggestions|text" />

    <RadioGroup
        android:id="@+id/rgIsPersonalKey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etHostname"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rbPersonalKey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/is_personal_key" />

        <RadioButton
            android:id="@+id/rbGuestKey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/is_guest_key" />
    </RadioGroup>

    <Button
        android:id="@+id/bSelectKey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rgIsPersonalKey"
        android:text="@string/select_key_file" />

    <Button
        android:id="@+id/bKeyImporter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rgIsPersonalKey"
        android:layout_toEndOf="@+id/bSelectKey"
        android:text="@string/importHelperText" />

</RelativeLayout>
