<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RegistrationActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvLabelForEtEmailID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/etRegEmailID"
            android:text="@string/enter_your_email_address" />

        <EditText
            android:id="@+id/etRegEmailID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvLabelForEtEmailID"
            android:ems="8"
            android:inputType="textEmailAddress" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvLabelForEtRegHostname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/etRegHostname"
            android:text="@string/enter_your_hostname" />

        <EditText
            android:id="@+id/etRegHostname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvLabelForEtRegHostname"
            android:digits="abcdefghijklmnopqrstuvwxyz.-0123456789"
            android:ems="8"
            android:inputType="text" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvLabelForEtRegPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/etRegPass"
            android:text="@string/password_hint_and_info" />

        <EditText
            android:id="@+id/etRegPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvLabelForEtRegPass"
            android:digits="abcdefghijklmnopqrstuvwxyz.-0123456789"
            android:ems="10"
            android:inputType="textPassword" />
    </RelativeLayout>

    <Button
        android:id="@+id/bRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register" />

</LinearLayout>
